@@ -88,7 +88,9 @@ Netzke.classes.Basepack.SearchPanel.ConditionField = Ext.extend(Ext.form.Composi
   },
 
   removeSelf: function(){
+    var ownerCt = this.ownerCt;
     this.destroy();
+    ownerCt.fireEvent('fieldsnumberchange'); // not too clean, but ok in this case, given that no one else except SearchPanel is using us
   },
 
   onAttributeChange: function(e){
